# protobuf-2-json

./: .gitignore  Cargo.toml  README.md
benches/: parse_once.rs
src/: lib.rs  message.rs  parser.rs  varint.rs
